--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url('cloud.png');
+    background-image: url('Cloud.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
